Fixed formField broken UI.

--- a/meveo-admin/web/src/main/webapp/stylesheet/main.css
+++ b/meveo-admin/web/src/main/webapp/stylesheet/main.css
@@ -386,3 +386,5 @@ input[type="submit"],
 
 /* td { border: 1px solid red !important; } */
 /*.ui-selectonemenu .ui-selectonemenu-label { width: 130px !important; }*/
+
+.no-padding td:first-child { padding: 0 0 0 2px; }
